# trippy

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: Cargo.toml  prompt.txt
backend/src/: main.rs
backend/src/routes/: mod.rs  prompt.rs  prompt.txt
backend/src/vertexai/: error.rs  mod.rs  token_provider.rs  types.rs
frontend/: .env  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Conversation.tsx  Footer.tsx  Header.tsx  MessageCard.tsx  MessageInput.tsx  Messages.tsx  SearchDialog.tsx  SearchForm.tsx  TripDetails.tsx
frontend/src/lib/: Message.ts  TripQuery.ts
