[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
gcp_auth = "0.10.0"
moka = { version = "0.12.5", features = ["future"] }
reqwest = { version = "0.11.9", features = ["json", "gzip"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*"}
time = { version = "*", features = ["serde", "parsing", "formatting"]}
tokio = { version = "1.35.1", features = ["full"] }
tower-http = {version = "0.5.0", features = ["fs", "cors"] }
# tower-sessions = "0.10.1"
tracing = { version = "*"}
tracing-subscriber = "0.3.18"
uuid = "1.7.0"
